@@ -11,16 +11,6 @@ CGUIDialogPlayerControls::~CGUIDialogPlayerControls(void)
 {
 }
 
-bool CGUIDialogPlayerControls::OnAction(const CAction &action)
-{
-  if (action.wID == ACTION_CLOSE_DIALOG || action.wID == ACTION_PREVIOUS_MENU)
-  {
-    Close();
-    return true;
-  }
-  return CGUIDialog::OnAction(action);
-}
-
 void CGUIDialogPlayerControls::Render()
 {
   if (!g_application.IsPlaying() || m_gWindowManager.GetActiveWindow() == WINDOW_FULLSCREEN_VIDEO)
